<resources>
    <string name="app_name">VehicleRepairShop-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="newperson_hint">Who?</string>
    <string name="newperson_button">Add Person</string>

    <string name="welcome">Welcome</string>
    <string name="username">Username:</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="new_name">New Name:</string>
    <string name="current_name">Current Name:</string>
    <string name="new_password">New Password:</string>
    <string name="login">Login</string>
    <string name="manage">Manage</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="ok">Ok</string>
    <string name="reminderTitle">You are due for an appointment!</string>
    <string name="reminder">Please book an appointment using our website.</string>

    <string name="business_name">Business Name</string>
    <string name="business_address">Business Address</string>
    <string name="business_phone_number">Business Phone Number</string>
    <string name="business_email">Business Email</string>
    <string name="BI_title">Business Information</string>
    <string name="go_back">Back To Main Page</string>
</resources>