<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="ca.mcgill.ecse321.vehiclerepairshop.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_BusinessInfo"
            app:destination="@id/BI_title" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="ca.mcgill.ecse321.vehiclerepairshop.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/BusinessInfo"
        android:name="ca.mcgill.ecse321.vehiclerepairshop.BusinessInfoRequestObject"
        android:label="@string/BI_title"
        tools:layout="@layout/business_info">

        <action
            android:id="@+id/action_BusinessInfo_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>